# SegmentAnyTooth

./: .gitignore  LICENSE  README.md  pyproject.toml  sam.py  segmentanytooth.py  utils.py
