[project]
name = "segmentanytooth"
version = "1.0.0"
description = "Open-source deep learning framework for tooth enumeration and segmentation in intraoral photos"
authors = [{ name = "Khoa Nguyen", email = "hi@khoanguyen.me" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.11"


dependencies = [
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "segment-anything-hq>=0.3",
    "timm>=0.9.2,<1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "ultralytics>=8.3.116",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ipython>=8.36.0", "ipywidgets>=8.1.6"]

[project.urls]
Repository = "https://github.com/thangngoc89/SegmentAnyTooth"
Paper = "https://doi.org/10.1016/j.jds.2025.01.003"
